# libspkg

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  lib.rs  plugin.rs
src/binpkg/: create.rs  err.rs  metadata.rs  mod.rs  read.rs
