[package]
name = "libspkg"
version = "0.1.2"
edition = "2021"

[dependencies]
tar = { version = "0.4.41", optional = true }
flate2 = { version = "1.0.30", optional = true  }

serde = { version = "1.0.204", optional = true , features = ["derive"] }
serde_json = { version = "1.0.120", optional = true  }

eyre = { version = "0.6.12", optional = true }

[features]
plugin = []
binpkg = ["dep:tar", "dep:flate2", "dep:serde", "dep:serde_json", "dep:eyre"]