[package]
name = "libspkg"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0"
description = "Spkg Rust Library"
homepage = "https://strawberryfoundations.org"
repository = "https://github.com/Strawberry-Foundations/libspkg"
readme = "README.md"

[dependencies]
tar = { version = "0.4.41", optional = true }
flate2 = { version = "1.0.31", optional = true  }

serde = { version = "1.0.207", optional = true , features = ["derive"] }
serde_json = { version = "1.0.124", optional = true  }

eyre = { version = "0.6.12", optional = true }

[features]
plugin = []
binpkg = ["dep:tar", "dep:flate2", "dep:serde", "dep:serde_json", "dep:eyre"]
